<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="ru.zabster.safepassapp.screens.login.presentation.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.cardview.widget.CardView
            style="@style/CardStyle.BaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/margin_big_size">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_title_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputField"
                    style="@style/TextStyle.EditText.PasswordType"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enableState}"
                    android:hint="@string/login_edit_text_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInput"
                        style="@style/TextStyle.EditText.PasswordType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/ButtonStyle.BaseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_size"
                    android:enabled="@{vm.enableState}"
                    android:text="@string/login_button_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>